# Automated-Data-Pipeline

./: README.md  Yelp_reviews.twb  pyproject.toml  requirementsyelp.txt
.astro/: config.yaml
dags/: yelpetl.py
